[Picture in Picture] Force resizing when resize handle is clicked

This CL changes the hit testing in OverlayWindowViews to force resizing
when the user clicks on the resize handle. Before this CL, the resize
handle was only used as an indicator of the ability to drag.

This CL also increases the size of the resize handler to match the tap
target of 36px defined in the spec, while adjusting the icon to adapt
to this. This CL also moves the icon slightly away from the corner to
match the spec.

Bug: 905864
Change-Id: I0d99c2ceff0f00ad51b268aa3803514552044f59
Reviewed-on: https://chromium-review.googlesource.com/c/1338867
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609300}