chrome/browser/ui/views/overlay/resize_handle_button.h
@@ -19,6 +19,7 @@ class ResizeHandleButton : public views::ImageButton {
 
   void SetPosition(const gfx::Size& size,
                    OverlayWindowViews::WindowQuadrant quadrant);
+  int GetHTComponent() const;
 
  private:
   void SetImageForQuadrant(OverlayWindowViews::WindowQuadrant quadrant);
